--- a/docs/styles/styles.css
+++ b/docs/styles/styles.css
@@ -50,7 +50,7 @@ h3 {
     h3 {
         font-size: 28px;
         margin: 15px;
-        margin-top: 15px;
+        margin-top: 25px;
     }
 
     body {
